WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254978
[iOS 16.x] WebRTC call not switching when connect with EarPods with Lightning Connector
https://bugs.webkit.org/show_bug.cgi?id=254978
Summary
[iOS 16.x] WebRTC call not switching when connect with EarPods with Lightning...
PhungDuong
Reported
2023-04-04 00:53:38 PDT
We found issues with the EarPods with Lightning Connector when making WebRTC calls. As follows: 1. Lightning-headphone connection 2. Join a WebRTC call 3. Check the currently selected device. Actual: On iPhone (16.2): In the Microphone selection, it is showing "IPhone Microphone" instead of selecting Headset Microphone. On iPad(16.4): I'm also seeing "iPad Microphone" selected. Note: We have tested with Bluetooth headsets, then the Microphone selection is correct. In addition, on older iOS versions like 14.4.2, 15.3.1, the correct option is selected when connecting to EarPods with Lightning Connector (meaning the Microphone is showing Headset Microphone)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-11 00:54:15 PDT
<
rdar://problem/107871881
>
youenn fablet
Comment 2
2023-05-15 02:04:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13871
EWS
Comment 3
2023-05-15 07:22:48 PDT
Committed
264070@main
(53bd19405878): <
https://commits.webkit.org/264070@main
> Reviewed commits have been landed. Closing PR #13871 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug