Cherry-pick 53bd19405878. rdar://problem/107871881

[iOS 16.x] WebRTC call not switching when connect with EarPods with Lightning Connector
    https://bugs.webkit.org/show_bug.cgi?id=254978
    rdar://107871881

    Reviewed by Eric Carlson.

    We are using the default route to select the default microphone on iOS.
    When headphones are plugged in, the route is the builtin route, but the subtype is different to differentiate
    iPhone speakers from headset.

    To take this into account on microphones, we keep the same logic to know the default route.
    But we do a first iteration to check whether there is a head set microphone available.
    If so, we consider this should be the default microphone if the default route is the builtin route.

    Manually tested.

    * Source/WebCore/platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.mm:
    (SOFT_LINK_CONSTANT):
    (WebCore::AVAudioSessionCaptureDeviceManager::retrieveAudioSessionCaptureDevices const):

    Canonical link: https://commits.webkit.org/264070@main
Identifier: 259548.857@safari-7615-branch